--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,7 +18,9 @@
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="style"
+      onload="this.rel='stylesheet'"
     />
     <link
       rel="stylesheet"
