--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -195,6 +195,7 @@ footer {
         width: 100%;
         height: 245px;
         object-fit: cover;
+        background-color: #e6eaec;
       }
     }
 
@@ -237,6 +238,8 @@ footer {
     picture {
       .restaurant-image {
         width: 100%;
+        min-height: 245px;
+        background-color: #e6eaec;
       }
     }
 
@@ -366,7 +369,7 @@ footer {
         .restaurant-image {
           width: 100%;
           min-height: 245px;
-          background-color: gray;
+          background-color: #e6eaec;
         }
       }
 
