--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -192,6 +192,7 @@ footer {
 
     &-image {
       img {
+        display: block;
         width: 100%;
         height: 245px;
         object-fit: cover;
@@ -240,6 +241,7 @@ footer {
         width: 100%;
         min-height: 245px;
         background-color: #e6eaec;
+        display: inline-block;
       }
     }
 
